[package]
name = "twob-market-making"
version = "0.1.0"
edition = "2024"

[dependencies]
anchor-client = { version = "0.32.1", features = ["async"] }
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
anyhow = "1.0.93"
dotenv = "0.15.0"
solana-rpc-client-types = "2.3.13"
tokio = { version = "1.0", features = ["full"] }