[package]
name = "twob-market-making"
version = "0.1.0"
edition = "2024"

[dependencies]
anchor-client = { version = "0.32.1", features = ["async"] }
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
anyhow = "1.0.93"
base64 = "0.22"
bincode = "1.3"
chrono = "0.4"
dotenv = "0.15.0"
opentelemetry = "0.31"
opentelemetry-appender-tracing = "0.31"
opentelemetry-otlp = { version = "0.31", features = ["gzip-http", "http-proto", "reqwest-blocking-client", "trace", "logs", "metrics"] }
opentelemetry-semantic-conventions = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio", "trace", "logs", "metrics"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-rpc-client-types = "2.3.13"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-error = "0.2"
tracing-opentelemetry = "0.32"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
